--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "nanoid": "^4.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
+    "react-components": "^0.5.1",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.6",
